WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284753
environmentMapReadyPromise must be in 'pending' state after reseting it with empty string
https://bugs.webkit.org/show_bug.cgi?id=284753
Summary
environmentMapReadyPromise must be in 'pending' state after reseting it with ...
Aleksei Marchenko
Reported
2024-12-16 08:57:13 PST
HTMLModelElement::environmentMapReadyPromise must be in 'pending' state after reseting it with empty string. That behavior matches `HTMLModelElement::readyPromise` that signals models source loading. Steps To Reproduce: 1. Load a model with an IBL set via `environmentMap` attribute. Check `environmentMapReady` state (fulfilled). 2. Remove IBL by using `environmentMap = “”`. Check `environmentMapReady` state. Results: `environmentMapReady` state is fulfilled. Expected: `environmentMapReady` state must be ‘pending’.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-12-19 14:39:33 PST
Committed
288124@main
(06fa32413283): <
https://commits.webkit.org/288124@main
> Reviewed commits have been landed. Closing PR #38045 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2024-12-19 14:40:14 PST
<
rdar://problem/141783711
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug