Keeps environmentMapReady promise in pending state after reset. https://bugs.webkit.org/show_bug.cgi?id=284753 rdar://141467143

Reviewed by Ada Chan.

environmentMapReadyPromise must be in pending state after resetting
environmentMap with an empty string. That behavior matches readyPromise
that signals models source loading.
In this particular fix we check whether a URL for environmentMap is
provided or not before resolving the promise.

There are no changes in LayoutTests/model-element/model-element-environment-map-ready.html
since there is no reliable way to verify that a Promise
is in pending state. The only thing we can do is to make sure
that modelElement.environmentMapReady promise has changed after URL reset.
That verification happens in `<model> rejects the environmentMapReady promise when its environmentMap load is aborted.`

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::didFinishEnvironmentMapLoading):

Canonical link: https://commits.webkit.org/288124@main